# whisperX-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  remove_timestamps.py  requirements.txt  transcribe.py
.github/workflows/: ci.yml
tests/: __init__.py  test_remove_timestamps.py
