[project]
name = "whisperx-pipeline"
version = "0.1.0"
description = "Local audio transcription and speaker diarization with WhisperX + pyannote"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "whisperx>=3.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "pytest>=8.2",
    "ruff>=0.8",
]

[project.scripts]
transcribe = "transcribe:main"
remove-timestamps = "remove_timestamps:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# See: https://docs.astral.sh/ruff/configuration/
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "env",
    "venv",
    "*.egg-info",
    "Audio",
    "Transcriptions",
]

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
    # -- Formatter conflicts (must be ignored when using ruff format) --
    "COM812",  # Missing trailing comma — conflicts with formatter
    "ISC001",  # Single-line implicit string concat — conflicts with formatter

    # -- Docstring style conflicts (D211 + D212 are the preferred pair) --
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["transcribe", "remove_timestamps"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
