[project]
name = "whisperx-pipeline"
version = "0.1.0"
description = "Local audio transcription and speaker diarization with WhisperX + pyannote"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "whisperx>=3.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pre-commit>=3.7",
    "ruff>=0.8",
]

[project.scripts]
transcribe = "transcribe:main"
remove-timestamps = "remove_timestamps:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "transcribe.py",
    "remove_timestamps.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "pyproject.toml",
    "transcribe.py",
    "remove_timestamps.py",
    ".env.example",
]


# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# See: https://docs.astral.sh/ruff/configuration/
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "env",
    "venv",
    "*.egg-info",
    "Audio",
    "Transcriptions",
]

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
    # -- Formatter conflicts (must be ignored when using ruff format) --
    "COM812",  # Missing trailing comma — conflicts with formatter
    "ISC001",  # Single-line implicit string concat — conflicts with formatter

    # -- Docstring style conflicts (D211 + D212 are the preferred pair) --
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
# INP001 — root-level scripts are not in a package by design; ANN401 — Any is unavoidable for untyped whisperx returns
"transcribe.py" = ["INP001", "ANN401"]
"remove_timestamps.py" = ["INP001"]

[tool.ruff.lint.isort]
known-first-party = ["transcribe", "remove_timestamps"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
exclude = [
    "^Audio/",
    "^Transcriptions/",
    "^.venv/",
]
